# OmniReadarr

./: .env.example  .gitignore  API_PLAN.md  APPS_PLAN.md  BACKEND_USER_FLOWS.md  BUTTON_UX_DESIGN.md  DIRECT_DOWNLOAD_PLAN.md  DOWNLOAD_PLAN.md  DOWNLOAD_PLAN_REVIEW.md  DOWNLOAD_STATUS_OPTIONS.md  Dockerfile  Dockerfile.worker  FRONTEND_API_PLAN.md  Makefile  POST_PROCESSING_PLAN.md  README.md  SEARCH_APP_PLAN.md  TEST_COVERAGE_ANALYSIS.md  docker-compose.yml  main.py  manage.py  pyproject.toml
.cursor/rules/: project-overview.mdc  workflow.md  workflow.mdc
core/: admin.py  models.py  models_processing.py
core/migrations/: 0001_initial.py
downloaders/: admin.py  api.py  apps.py  models.py  tests.py  urls.py
downloaders/clients/: __init__.py  results.py  sabnzbd.py  tests.py
downloaders/migrations/: 0001_initial.py  0002_downloadclientconfiguration_and_more.py
downloaders/services/: __init__.py  download.py  search.py  test_download.py  tests.py
downloaders/tests/: conftest.py  test_api.py  tests.py
indexers/: admin.py  apps.py  models.py  tests.py
indexers/migrations/: 0001_initial.py  0002_delete_downloadclientconfiguration.py
indexers/prowlarr/: __init__.py  client.py  results.py  tests.py
media/: admin.py  api.py  models.py  urls.py  utils.py  views.py
media/migrations/: 0001_initial.py  (+3 more)
omnireadarr/: asgi.py  settings.py  tasks.py  urls.py  wsgi.py
processing/: api.py  apps.py  test_api.py  urls.py
search/: admin.py  models.py  urls.py  views.py
tests/: conftest.py  test_media_api.py  test_openlibrary_provider.py
(+31 files in other folders)
