[project]
name = "omnireadarr"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-dramatiq>=0.15.0",
    "django-environ>=0.12.0",
    "django-stubs>=5.2.8",
    "dramatiq[rabbitmq]>=2.0.0",
    "gunicorn>=23.0.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "omnireadarr.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests", "indexers", "downloaders", "processing"]
